# takstar

./: build.gradle  settings.gradle  update.txt
app/: CMakeLists.txt  build.gradle
app/release/: output-metadata.json  output.json  update.txt
app/src/androidTest/java/xlk/takstar/paperless/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: client.dev  client.ini
app/src/main/cpp/: helpers.c  jni_wallet_netinit.cpp  wallet_net.cpp
app/src/main/cpp/include/: androidcapturevideo.h  base.h  commdef.h  deviceid_suffix.h  helpers.h  jni_wallet_netinit.h  libDevice_androidcapture.h  wallet_net.h
app/src/main/cpp/include/meetc/: InterFaceCorePBModule.h  interpublic.h  libMeetInterface.h  meetinterface_type.h  owbase.h
app/src/main/java/com/mogujie/tt/protobuf/: InterfaceAdmin.java  InterfaceAgenda.java  InterfaceBase.java  InterfaceBullet.java  InterfaceCommondata.java  InterfaceContext.java  InterfaceDevice.java  InterfaceDownload.java  InterfaceFaceconfig.java  InterfaceFile.java  InterfaceFilescorevote.java  InterfaceIM.java  InterfaceMacro.java  InterfaceMeet.java  InterfaceMeetfunction.java  InterfaceMember.java  InterfaceMsn.java  InterfacePerson.java  InterfacePlaymedia.java  InterfaceRoom.java  InterfaceSignin.java  InterfaceStatistic.java  InterfaceStop.java  InterfaceStream.java  InterfaceSystemlog.java  InterfaceTablecard.java  InterfaceTask.java  InterfaceUpload.java  InterfaceVideo.java  InterfaceVote.java  InterfaceWhiteboard.java
app/src/main/java/xlk/takstar/paperless/: App.java  ErrorActivity.java  MyApplication.java
app/src/main/java/xlk/takstar/paperless/adapter/: AgendaAdapter.java  AgendaFileAdapter.java  BulletAdapter.java  ChatMemberAdapter.java  DevMemberAdapter.java  DirAdapter.java  DownloadFileAdapter.java  FeaturesAdapter.java  FileAdapter.java  LocalFileAdapter.java  MeetChatMemberAdapter.java  MeetLiveVideoAdapter.java  MemberAdapter.java  MemberDetailAdapter.java  MemberRoleAdapter.java  MulitpleItemAdapter.java  PopPushMemberAdapter.java  PopPushProjectionAdapter.java  ScoreAdapter.java  (+14 more)
app/src/main/res/anim/: pophide_end_start.xml  pophide_start_end.xml  popshow_end_start.xml  popshow_start_end.xml
app/src/main/res/drawable/: btn_status_textcolor.xml  calculator_s.xml  chat_member_bg.xml  check_box_style.xml  clean_s.xml  dialog_bottom_gray_bg.xml  dialog_content_bg.xml  dialog_top_blue_bg.xml  draw_annotation_selected.xml  draw_tool_status.xml  feature_agenda_icon.xml  feature_annotate_icon.xml  feature_bulletin_icon.xml  feature_chat_icon.xml  feature_draw_icon.xml  feature_election_manage_icon.xml  feature_materials_icon.xml  feature_more_icon.xml  feature_score_manage_icon.xml  feature_score_view_icon.xml  feature_screen_manage_icon.xml  feature_signin_icon.xml  feature_status_textcolor.xml  feature_terminal_icon.xml  feature_video_control_icon.xml  feature_video_icon.xml  feature_vote_manage_icon.xml  feature_web_icon.xml  file_button_status.xml  file_s.xml  item_file_bg_color.xml  join_meet_btn_text_color.xml  join_to_meet_btn.xml  meeting_feature_bg.xml  menu_back_status.xml  menu_call_service_status.xml  menu_join_screen_status.xml  menu_meet_note_status.xml  menu_screenshot_status.xml  menu_start_pro_status.xml  (+51 more)
app/src/main/res/layout/: activity_admin.xml  activity_camera.xml  activity_chat_video.xml  activity_error.xml  activity_main.xml  activity_meeting.xml  activity_video.xml  circle_menu_item.xml  dialog_enter_pwd.xml  dialog_operation_tip_view.xml  dialog_score_view.xml  divided_line_horizontal.xml  divided_line_vertical.xml  draw_fragment.xml  fab_menu_view.xml  fab_note_view.xml  fragment_agenda.xml  fragment_annotate.xml  fragment_bullet.xml  fragment_chat.xml  fragment_live_video.xml  fragment_live_video_test.xml  fragment_material.xml  fragment_score_manage.xml  fragment_screen_manage.xml  fragment_sign.xml  fragment_terminal_control.xml  fragment_video.xml  fragment_vote_manage.xml  fragment_web.xml  horizontal_line.xml  include_cancel_ensure.xml  item_admin_parent.xml  item_agenda_file.xml  item_bullet.xml  item_chat_left.xml  item_chat_member.xml  item_chat_online_member.xml  item_chat_right.xml  item_dev_member.xml  (+61 more)
app/src/main/res/raw/: fragment_mediacodec.glsl
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml  values.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/xlk/takstar/paperless/: ExampleUnitTest.java
(+148 files in other folders)
